syntax = "proto3";
package HandinTwo;

option go_package = "grpc/proto";

message Share {
    int64 shareOfSecret = 1;
} 

message Acknowledge {
    string message = 1;
}

// Patient to patient communication
service ShareSendingService {
  rpc SendShare(Share) returns (Acknowledge) {};
}

message AggregatedShare {
    int64 aggregatedShare = 1;
}

// Patient to hospital communication
service AggregatedShareService {
  rpc SendAggregatedShare(AggregatedShare) returns (Acknowledge) {};
}